tests/parser-test-files/bad-files/define-instance.5.error
error: Malformed instance definition
  --> test:4:17
   |
 4 |  (define-instance (C :a . :b))
   |                   ^^^^^^^^^^^ unexpected dotted list
