tests/parser-test-files/bad-files/define-instance.5.coal
;; BAD: Parse Instance
(package test-package)

(define-instance (C :a . :b))
